--- a/app/globals.css
+++ b/app/globals.css
@@ -153,7 +153,7 @@ body {
 
 .markdown-body th,
 .markdown-body td {
-  border: 1px solid #ffffff; /* slate-600  475569* / 
+  border: 1px solid #475569; /* slate-600  * / 
   padding: 0.75em 3em;
   text-align: left;
   vertical-align: middle;
