--- a/app/globals.css
+++ b/app/globals.css
@@ -220,17 +220,10 @@ body {
 
 
 .mouse {
-  position: absolute;
-  width: 100px;
-  height: 100px;
+  width: 120px;
   pointer-events: none;
-  border-radius: 50%;
- @apply border border-blue-700;
-box-shadow: 0 0 50px 30px rgba(200, 200, 200, 0.20);
-/* backdrop-filter: blur(20px); */
-
- 
-
+  border-radius: 5%;
+  @apply border border-white/40 bg-white/5 backdrop-blur-[5px] flex items-center justify-center shadow-blue-400/10;
 
   z-index: 100;
 }
